# SnippingTool

./: CMakeLists.txt  fileops.cpp  fileops.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Displayfuncs/: opencvfiles.cpp  opencvfiles.hpp  qtfuncs.cpp  xlibrary.cpp  xlibrary.h
Utilityfuncs/: fileops.cpp  fileops.hpp  qtfuncs.cpp  qtfuncs.hpp
cmake/: CMakeCache.txt  Snippingtool  cmake_install.cmake
